Correcting spacing for mobile

--- a/src/components/myImage.module.css
+++ b/src/components/myImage.module.css
@@ -22,6 +22,7 @@
 .myImage_container {
     display: block;
     margin-top: 0;
+    padding: 10px 0;
     /* margin-left: 20px;
     margin-right: 20px; */
     background-color: var(--color-primary);
